// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingView renders correctly with custom text message 1`] = `
<div
  className="loading-spinner "
>
  <div
    className="sk-circle"
  >
    <div
      className="sk-circle1 sk-child"
    />
    <div
      className="sk-circle2 sk-child"
    />
    <div
      className="sk-circle3 sk-child"
    />
    <div
      className="sk-circle4 sk-child"
    />
    <div
      className="sk-circle5 sk-child"
    />
    <div
      className="sk-circle6 sk-child"
    />
    <div
      className="sk-circle7 sk-child"
    />
    <div
      className="sk-circle8 sk-child"
    />
    <div
      className="sk-circle9 sk-child"
    />
    <div
      className="sk-circle10 sk-child"
    />
    <div
      className="sk-circle11 sk-child"
    />
    <div
      className="sk-circle12 sk-child"
    />
  </div>
  <div
    className="loading-spinner__text"
  >
    <span>
      Loading message
    </span>
  </div>
</div>
`;

exports[`LoadingView renders correctly with default props 1`] = `
<div
  className="loading-spinner loading-spinner--hidden"
>
  <div
    className="sk-circle"
  >
    <div
      className="sk-circle1 sk-child"
    />
    <div
      className="sk-circle2 sk-child"
    />
    <div
      className="sk-circle3 sk-child"
    />
    <div
      className="sk-circle4 sk-child"
    />
    <div
      className="sk-circle5 sk-child"
    />
    <div
      className="sk-circle6 sk-child"
    />
    <div
      className="sk-circle7 sk-child"
    />
    <div
      className="sk-circle8 sk-child"
    />
    <div
      className="sk-circle9 sk-child"
    />
    <div
      className="sk-circle10 sk-child"
    />
    <div
      className="sk-circle11 sk-child"
    />
    <div
      className="sk-circle12 sk-child"
    />
  </div>
  <div
    className="loading-spinner__text"
  >
    <span>
      
    </span>
  </div>
</div>
`;

exports[`LoadingView renders correctly with delay and custom message 1`] = `
<div
  className="loading-spinner loading-spinner--hidden"
>
  <div
    className="sk-circle"
  >
    <div
      className="sk-circle1 sk-child"
    />
    <div
      className="sk-circle2 sk-child"
    />
    <div
      className="sk-circle3 sk-child"
    />
    <div
      className="sk-circle4 sk-child"
    />
    <div
      className="sk-circle5 sk-child"
    />
    <div
      className="sk-circle6 sk-child"
    />
    <div
      className="sk-circle7 sk-child"
    />
    <div
      className="sk-circle8 sk-child"
    />
    <div
      className="sk-circle9 sk-child"
    />
    <div
      className="sk-circle10 sk-child"
    />
    <div
      className="sk-circle11 sk-child"
    />
    <div
      className="sk-circle12 sk-child"
    />
  </div>
  <div
    className="loading-spinner__text"
  >
    <span>
      Loading message
    </span>
  </div>
</div>
`;

exports[`LoadingView renders correctly with delay and custom message 2`] = `
<div
  className="loading-spinner "
>
  <div
    className="sk-circle"
  >
    <div
      className="sk-circle1 sk-child"
    />
    <div
      className="sk-circle2 sk-child"
    />
    <div
      className="sk-circle3 sk-child"
    />
    <div
      className="sk-circle4 sk-child"
    />
    <div
      className="sk-circle5 sk-child"
    />
    <div
      className="sk-circle6 sk-child"
    />
    <div
      className="sk-circle7 sk-child"
    />
    <div
      className="sk-circle8 sk-child"
    />
    <div
      className="sk-circle9 sk-child"
    />
    <div
      className="sk-circle10 sk-child"
    />
    <div
      className="sk-circle11 sk-child"
    />
    <div
      className="sk-circle12 sk-child"
    />
  </div>
  <div
    className="loading-spinner__text"
  >
    <span>
      Loading message
    </span>
  </div>
</div>
`;
